--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,6 @@
 # This is a basic workflow to help you get started with Actions
-
+im a student of wcc and i want to learn more about coding
+and development of applications
 name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request 
